--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -31,17 +31,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap"
+    rel="stylesheet">
+
   <title>DATN</title>
   <style>
-
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
   </style>
+
 </head>
 
-<body>
+<body style="font-family: 'Roboto', sans-serif; font-size: 16.5px; font-weight: 405;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" style="font-family: 'Roboto', sans-serif;"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
