--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -14,6 +14,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- import jquery required-->
 
 
 
@@ -43,7 +44,8 @@
 
 <body style="font-family: 'Roboto', sans-serif; font-size: 16.5px; font-weight: 405;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" style="font-family: 'Roboto', sans-serif;"></div>
+  <div id="root" style="font-family: 'Roboto', sans-serif;">
+  </div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
